added background soundtrack

--- a/Put po Srbiji/.classpath
+++ b/Put po Srbiji/.classpath
@@ -6,6 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="sounds"/>
 	<classpathentry kind="src" path="maps"/>
 	<classpathentry kind="src" path="images"/>
 	<classpathentry kind="output" path="bin"/>
